--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,12 +4,7 @@
     padding: 0px;
 }
 
-.mynav{
-    background-color: #7FCF78;
-    margin-bottom: 0px;
-    padding-left:200px;
-    padding-bottom: 200px;
-}
+
 .main-container{
     background-color:#CAFCC5;
     padding-top:40px;
@@ -26,46 +21,13 @@ li.myuser{
 	font-weight: bold;
 }
 
-.rightsidediv{
-	background-color:white;
-    padding: 70px 50px;
-    padding-bottom: 100px;
-	margin-left: 50px;
-	border-radius: 5px;
-	margin-top: 5px;
-}
+
 
 .amountwrapper{
 	padding-top: 2px;
 }
 
-.qty {
-    width: 35px;
-	height: 30px;
-	text-align: center;
-	border: none;
-	background: #2eb82e;
-	color: white;
-}
 
-input.qtyplus { 
-	width:31px; 
-	height:30px;
-	border: 2px solid #2eb82e;
-	background-color: white;
-	border-radius: 3px;
-	text-align: center;
-	margin: -5px;
-}
-input.qtyminus { 
-	width:30px; 
-	height:30px;
-	border: 2px solid #2eb82e;
-	background-color: white;
-	border-radius: 3px;
-	text-align: center;
-	margin: -5px;
-}
 .inputdiv{
 	margin-bottom: 30px;
 }
@@ -84,7 +46,7 @@ input.qtyminus {
 
 .leftside{
     float: right;
-	background-color:greenyellow;
+	background-color:#CAFCC5;
 	margin-right: 20px;
 	border-radius: 5px;
 	padding-bottom: 120px;
