second commit with success message

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
 <div class = "container-fluid mybody">
 <app-nav></app-nav>
 <div class = "container-fluid main-container">
-
+<app-success></app-success>
 <div class = "row">
 	<app-right-side-div></app-right-side-div>
 <div class = "col-md-4 leftside">
