--- a/src/app/right-side-div/right-side-div.component.html
+++ b/src/app/right-side-div/right-side-div.component.html
@@ -40,7 +40,7 @@
           <label for="targetServiceTime" class="col-sm-4 col-form-label">Target Service Time</label>
           <div class='col-sm-4'>        
                <div class="input-group date" data-date-format="dd.mm.yyyy">
-                   <input  type="text" class="form-control" placeholder="dd-mm-yyyy">
+                   <input  type="date" class="form-control" placeholder="dd-mm-yyyy">
                   <div class="input-group-addon" >
                       <span class="glyphicon glyphicon-th"></span>		            	
                     </div>
