"Buttons are working with value updation"

--- a/src/app/calculate-button/calculate-button.component.html
+++ b/src/app/calculate-button/calculate-button.component.html
@@ -1,6 +1,6 @@
 
 <div class="amountwrapper col col-sm-4">
     <input type='button' value='-' class="qtyminus" field='quantity' (click)="decrement()" />
-    <input type='text' name='quantity' value='{{counter}}' class='qty' />
+    <input type='text' disabled name='quantity' value='{{counter}}' class='qty' />
     <input type='button' value='+' class='qtyplus' field='quantity'(click)="increment()" />
   </div>
