--- a/src/app/right-side-div/right-side-div.component.css
+++ b/src/app/right-side-div/right-side-div.component.css
@@ -14,6 +14,9 @@
 .inputdiv input, .inputdiv select{
 	border: 2px solid #2eb82e;
 }
+.inputdiv label{
+	text-align: right;
+}
 .amountwrapper{
 	padding-top: 2px;
 }
