--- a/src/app/success/success.component.css
+++ b/src/app/success/success.component.css
@@ -1,11 +1,23 @@
 .successTab{
     padding-bottom: 20px;
     padding-top:10px;
-    padding-left:50px;
-    background-color: red;
+    padding-left:10px;
+    background-color:rgb(131, 240, 131);
     width:50%;
     position: relative;
     text-align: center;
     margin-left: auto;
-     margin-right: auto
+    margin-right: auto;
+    border-radius: 5px;
+    
+}
+.crossButton{
+    color:rgb(2, 131, 24);
+    background-color:rgb(131, 240, 131);
+    border: 0px;
+}
+
+.message{
+    padding-left:0px;
+    margin-left: 0px;
 }
