--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,87 +11,18 @@
 <body>
 		
 <div class = "container-fluid mybody">
-<app-nav></app-nav>
-<div class = "container-fluid main-container">
-<app-success></app-success>
-<div class = "row">
-	<app-right-side-div></app-right-side-div>
-<div class = "col-md-4 leftside">
-
-	<div class="row leftsidediv">
-		<div class="col-md-12 ">
-			<h2>Your Request Details</h2>
-			<span class="col col-sm-3 myspan">Tea</span>
-			<app-calculate-button></app-calculate-button>
-			<span class="col col-sm-2 myspan1">x 50</span>
-			<span class="col col-sm-3 myspan"> &#8377;50</span>
+	<app-nav></app-nav>
+	<div class = "container-fluid main-container">
+		<app-success></app-success>
+		<div class = "row">
+			<app-right-side-div></app-right-side-div>
+			<app-left-div></app-left-div>
 		</div>
+
 	</div>
 
-	<div class = "row leftsidediv1">
-		<div class="col-md-12 ">
-			<div class="row subtotal">
-				<span class="col col-sm-6"><h3>Subtotal</h3></span>
-				<span class="col col-sm-5 myspan2">50</span>
-			</div>
-			<div>(plus taxes)</div>
-			<div class="form-group submit">
-				<textarea class="form-control comment" rows="2" id="comment"></textarea>
-				<button type="button" class="btn btn-success btn-lg btn-block">Submit</button>
-			</div>
-		
-		</div>
-	</div>
 
 </div>
 
-</div>
-
-</div>
-
-
-</div>
-
-
-
-<!-- <script type="text/javascript">
-
-	jQuery(document).ready(function(){
-    // This button will increment the value
-    $('.qtyplus').click(function(e){
-        // Stop acting like a button
-        e.preventDefault();
-        // Get the field name
-        fieldName = $(this).attr('field');
-        // Get its current value
-        var currentVal = parseInt($('input[name='+fieldName+']').val());
-        // If is not undefined
-        if (!isNaN(currentVal)) {
-            // Increment
-            $('input[name='+fieldName+']').val(currentVal + 1);
-        } else {
-            // Otherwise put a 0 there
-            $('input[name='+fieldName+']').val(0);
-        }
-    });
-    // This button will decrement the value till 0
-    $(".qtyminus").click(function(e) {
-        // Stop acting like a button
-        e.preventDefault();
-        // Get the field name
-        fieldName = $(this).attr('field');
-        // Get its current value
-        var currentVal = parseInt($('input[name='+fieldName+']').val());
-        // If it isn't undefined or its greater than 0
-        if (!isNaN(currentVal) && currentVal > 0) {
-            // Decrement one
-            $('input[name='+fieldName+']').val(currentVal - 1);
-        } else {
-            // Otherwise put a 0 there
-            $('input[name='+fieldName+']').val(0);
-        }
-    });
-});
-</script> -->
 </body>
 </html>
