--- a/src/app/bottom-left-div/bottom-left-div.component.html
+++ b/src/app/bottom-left-div/bottom-left-div.component.html
@@ -1,5 +1,5 @@
 <div class = "row leftsidediv1">
-    <div class="col-md-12 ">
+    <div class="col-sm-12 ">
       <div class="row subtotal">
         <span class="col col-sm-5"><h4>Subtotal</h4></span>
         <span class="col col-sm-6 myspan2">50</span>
@@ -7,7 +7,7 @@
       <div>(plus taxes)</div>
       <div class="form-group submit">
         <textarea class="form-control comment" rows="2" id="comment"></textarea>
-        <button type="button" class="btn btn-success btn-lg btn-block">Submit</button>
+        <button type="button" class="btn btn-success btn-lg btn-block" (click) = "submit()">submit </button>
       </div>
     
     </div>
