--- a/src/app/top-left-div/top-left-div.component.html
+++ b/src/app/top-left-div/top-left-div.component.html
@@ -1,5 +1,5 @@
 <div class="row leftsidediv">
-    <div class="col-md-12 ">
+    <div class="col-sm-12 ">
       <h2>Your Request Details</h2>
       <span class="col col-sm-3 myspan">Tea</span>
       <app-calculate-button (counterEvent)="amount =$event"></app-calculate-button>
