submit button and toast is working

--- a/src/app/success/success.component.html
+++ b/src/app/success/success.component.html
@@ -1,4 +1,4 @@
-<div class="conatainer successTab" [style.visibility] = "visible">
+<div class="conatainer successTab" [style.visibility] = "param">
   <div class="row message">
    <div class="col-md-8 message">
   <p style = "color: rgb(2, 131, 24)">
@@ -6,7 +6,7 @@
   </p>
   </div>
 
-  <div class="col-md-4"><input type = "button" value = "X"class = "crossButton" (click)="visible = 'hidden';"/>
+  <div class="col-md-4"><input type = "button" value = "X"class = "crossButton" (click)="param = 'hidden';"/>
 </div>
 
 
