--- a/src/app/house-keeping/house-keeping.component.html
+++ b/src/app/house-keeping/house-keeping.component.html
@@ -13,15 +13,12 @@
           </div>
         </div>
         <div class="form-group row inputdiv">
-          <label for="exampleFormControlSelect1" class="col-sm-4 col-form-label">Service Category</label>
+          <label for="mainCategory" class="col-sm-4 col-form-label">Service Category</label>
           <div class="col-sm-4">
-            <select class="form-control" id="exampleFormControlSelect1">
-                <option>1</option>
-                <option>2</option>
-                <option>3</option>
-                <option>4</option>
-                <option>5</option>
-            </select>
+            <select class="form-control" id="mainCategory" name = "mainCategory" (change)="callType($event)" >
+                <option *ngFor = "let category of parentCategories" [ngValue] = "category" [value] = "category.serviceTypeId" >"{{category.serviceTypeDesc}}"</option>
+			</select>
+			<p>"{{serviceId}}" </p>
           </div>
         </div>
         <div class="form-group row inputdiv">
@@ -29,14 +26,10 @@
           <div class= "col-sm-8">
           <div class="col-sm-6 dropdown">
             <select class="form-control" id="exampleFormControlSelect1">
-                <option>Tea</option>
-                <option>Cofee</option>
-                <option>Shirt</option>
-                <option>Trousers</option>
-                <option>Jacket</option>
+                <option *ngFor = "let subCategory of subCategories">"{{subCategory.serviceTypeDesc}}"  </option>
             </select>
           </div>
-		  <span class="col col-sm-2 myspan"> &#8377;{{50*amount}}</span>
+		  <span class="col col-sm-2 myspan"> &#8377;{{ 50 *counter}}</span>
 		  
 			<div class="amountwrapper col col-sm-4">
 				<input type='button' value='-' class="qtyminus" field='quantity' (click)="decrement()" />
@@ -72,7 +65,7 @@
 
 
 
-			<app-left-div></app-left-div>
+			<app-left-div [count] = counter></app-left-div>
 		</div>
 
 	</div>
