--- a/src/app/left-div/left-div.component.html
+++ b/src/app/left-div/left-div.component.html
@@ -6,12 +6,10 @@
         <h2>Your Request Details</h2>
         <span class="col col-sm-3 myspan">Tea</span>
           <div class="amountwrapper col col-sm-4">
-            <input type='button' value='-' class="qtyminus" field='quantity' (click)="decrement()" />
-            <input type='text' disabled name='quantity' value='{{counter}}' class='qty' />
-            <input type='button' value='+' class='qtyplus' field='quantity'(click)="increment()" />
+            <input type='text' disabled name='quantity' value={{count}} class='qty' />
           </div>
         <span class="col col-sm-2 myspan1">x 50</span>
-        <span class="col col-sm-3 myspan"> &#8377;{{50*amount}}</span>
+        <span class="col col-sm-3 myspan"> &#8377;{{50*count}}</span>
       </div>
     </div>
 
@@ -22,7 +20,7 @@
     <div class="col-sm-12 ">
       <div class="row subtotal">
         <span class="col col-sm-5"><h4>Subtotal</h4></span>
-        <span class="col col-sm-6 myspan2">50</span>
+        <span class="col col-sm-6 myspan2">{{59*count}}</span>
       </div>
       <div>(plus taxes)</div>
       <div class="form-group submit">
