--- a/src/app/left-div/left-div.component.html
+++ b/src/app/left-div/left-div.component.html
@@ -4,7 +4,7 @@
     <div class="row leftsidediv">
       <div class="col-sm-12 ">
         <h2>Your Request Details</h2>
-        <span class="col col-sm-3 myspan">Tea</span>
+        <span class="col col-sm-3 myspan">{{request}}</span>
           <div class="amountwrapper col col-sm-4">
             <input type='text' disabled name='quantity' value={{count}} class='qty' />
           </div>
